--- a/bmqas/about.html
+++ b/bmqas/about.html
@@ -101,10 +101,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<nav class="link-effect-4" id="link-effect-4">
 								<ul class="nav navbar-nav">
-									<li class="active"><a href="index.html" data-hover="Home">Home </a></li>
+									<li ><a href="index.html" data-hover="Home">Home </a></li>
 									<li><a data-hover="Services" href="services.html">Services</a></li>
 									<li><a data-hover="Services" href="apps.html">Apps</a></li>
-									<li><a href="about.html" data-hover="About">About Us</a></li>
+									<li class="active"><a href="about.html" data-hover="About">About Us</a></li>
 									<li><a href="career.html" data-hover="codes">Career</a></li>
 									<li><a data-hover="Contact" href="contact.html">Contact</a></li>
 								</ul>
@@ -114,7 +114,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<!-- /.container-fluid -->
 				</nav>
-				<div class="clearfix"></div>
+				<div class="clearfix"></div> 
 			</div>
 		</div>
 	</div>
