--- a/bmqas/career.html
+++ b/bmqas/career.html
@@ -103,11 +103,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <nav class="link-effect-4" id="link-effect-4">
                                 <ul class="nav navbar-nav">
-                                    <li class="active"><a href="index.html" data-hover="Home">Home </a></li>
+                                    <li ><a href="index.html" data-hover="Home">Home </a></li>
                                     <li><a data-hover="Services" href="services.html">Services</a></li>
                                     <li><a data-hover="Services" href="apps.html">Apps</a></li>
                                     <li><a href="about.html" data-hover="About">About Us</a></li>
-                                    <li><a href="career.html" data-hover="codes">Career</a></li>
+                                    <li class="active"><a href="career.html" data-hover="codes">Career</a></li>
                                     <li><a data-hover="Contact" href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
