--- a/bmqas/index.html
+++ b/bmqas/index.html
@@ -1,9 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html>
 
@@ -192,10 +187,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="col-md-3 ban-grid">
 				<div class="ban-left">
-					<h4>Expert Engineer</h4>
+					<h4>Expert Engineers</h4>
 				</div>
 				<div class="ban-right">
-					<i class="fa fa-user"></i>
+					<i class="fa fa-users"></i>
 				</div>
 				<div class="clearfix"></div>
 			</div>
