Final change with ZK sir feedback

--- a/bmqas/apps.html
+++ b/bmqas/apps.html
@@ -264,16 +264,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="container">
 				<center><h2 style="margin-bottom: 20px;">Our Client</h2></center>
 				<section class="customer-logos slider">
-					<div class="slide"><img src="images/client1.png"></div>
-					<div class="slide"><img src="images/client2.png"></div>
-					<div class="slide"><img src="images/client3.png"></div>
-					<div class="slide"><img src="images/client4.png"></div>
-					<div class="slide"><img src="images/client1.png"></div>
-					<div class="slide"><img src="images/client2.png"></div>
-					<div class="slide"><img src="images/client3.png"></div>
-					<div class="slide"><img src="images/client4.png"></div>
-					
-
+					<a href="https://www.grameenphone.com/" target="_blank" title="Grameenphone"><div class="slide"><img src="images/client1.png"></div></a>
+					<a href="https://www.cisco.com/" target="_blank" title="CISCO"><div class="slide"><img src="images/client2.png"></div></a>
+					<a href="https://www.pwc.com/" target="_blank" title="Price Water House Coopers"><div class="slide"><img src="images/client3.png"></div></a>
+					<a href="http://technaf.net/" target="_blank" title="Technaf"><div class="slide"><img src="images/client4.png"></div></a>
+					<a href="http://www.shebatech.com.bd/" target="_blank" title="Sheba Tech"><div class="slide"><img src="images/client5.png"></div></a>
 				</section>
 			</div>
 		</div>
@@ -288,7 +283,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="col-md-3 footer-grid">
 				<h4>Newsletter</h4>
-				<p>Please Enter your email for recive info of our Extreme Offer and product</p>
+				<p>Please Enter your email for receive porduct info</p>
 				<form action="#" method="post">
 					<input type="text" name="Email" placeholder="enter email address" required>
 					<input type="submit" value="Go">
@@ -374,7 +369,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script>
 	$(document).ready(function () {
 		$('.customer-logos').slick({
-			slidesToShow: 6,
+			slidesToShow: 4,
 			slidesToScroll: 1,
 			autoplay: true,
 			autoplaySpeed: 1000,
