--- a/bmqas/services.html
+++ b/bmqas/services.html
@@ -449,7 +449,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="col-md-3 footer-grid">
 				<h4>Newsletter</h4>
-				<p>Please Enter your email for recive info of our Extreme Offer and product</p>
+				<p>Please Enter your email for receive porduct info</p>
 				<form action="#" method="post">
 					<input type="text" name="Email" placeholder="enter email address" required>
 					<input type="submit" value="Go">
