--- a/bmqas/about.html
+++ b/bmqas/about.html
@@ -165,7 +165,7 @@
 							<h5>Engineers</h5>
 						</div>
 						<div class="col-md-3 statistics-grid">
-							<div class='numscroller numscroller-big-bottom' data-slno='1' data-delay='.5' data-increment="50">5560+</div>
+							<div class='numscroller numscroller-big-bottom' data-slno='1' data-delay='.5' data-increment="50">4310+</div>
 							<h5>Working Days</h5>
 						</div>
 						<div class="col-md-3 statistics-grid">
@@ -381,7 +381,7 @@
 
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
 				<p>Dhaka, 1000, BD</p>
-				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com"> websales@Bengal Mobile QA Solution.com</a></p>
+				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:websales@bengalmobileqa.com"> websales@bengalmobileqa.com</a></p>
 				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1701 64 48 79</p>
 
 
@@ -422,7 +422,7 @@
 	<!---copy-->
 	<div class="copy-section">
 		<div class="container">
-			<p>&copy; 2012 - 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
+			<p>&copy; 2004 - 2017 Bengal Mobile QA Solution . All rights reserved | Developed by <a href="http://bengalmobileqa.com/" target="_blank">Bengal Mobile QA Solution</a></p>
 		</div>
 	</div>
 	<!---copy-->
