--- a/bmqas/career.html
+++ b/bmqas/career.html
@@ -205,7 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
 				<p>Dhaka, 1000, BD</p>
-				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com"> websales@Bengal Mobile QA Solution.com</a></p>
+				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:websales@bengalmobileqa.com"> websales@bengalmobileqa.com</a></p>
 				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1701 64 48 79</p>
 
 
@@ -246,7 +246,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!---copy-->
 	<div class="copy-section">
 		<div class="container">
-			<p>&copy; 2012 - 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
+			<p>&copy; 2004 - 2017 Bengal Mobile QA Solution . All rights reserved | Developed by <a href="http://bengalmobileqa.com/" target="_blank">Bengal Mobile QA Solution</a></p>
 		</div>
 	</div>
 	<!---copy-->
