--- a/bmqas/services.html
+++ b/bmqas/services.html
@@ -429,10 +429,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="cour-clientgrids">
 					<div class="col-md-8 client-grid">
 						<h4>What our clients are saying...</h4>
-						<p>“MyVPS is awesome! Reliable, secure Smart Refit , Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel pharetra
-							diam. Aenean convallis nibh facilisis risus and clients. 9/12, 5 Stars all around lorem ipsum dolto sit amet! There
-							are many variations of passages of Lorem Ipsum available”</p>
-						<p>Nick Harris : <a href="mailto:info@example.com">info@example.com</a></p>
+						<p>“Bengal Mobile QA Solution is a full service Technology development and IT Services provider firm . We design, develop and manage market-leading mobile and web apps and software solutions for clients across industries. We are focused on end-user value, not using technology for the sake of technology, but bringing technology to solve real-world challenges with great intuitive user-experiences.”</p>
+						<!-- <p>Nick Harris : <a href="mailto:info@example.com">info@example.com</a></p> -->
 					</div>
 					<div class="col-md-4 client-grid1">
 						<img src="images/c7.png" class="img-responsive" alt="" />
@@ -485,7 +483,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
 				<p>Dhaka, 1000, BD</p>
-				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com"> websales@Bengal Mobile QA Solution.com</a></p>
+				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:websales@bengalmobileqa.com"> websales@bengalmobileqa.com</a></p>
 				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1701 64 48 79</p>
 
 
@@ -526,7 +524,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!---copy-->
 	<div class="copy-section">
 		<div class="container">
-			<p>&copy; 2012 - 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
+			<p>&copy; 2004 - 2017 Bengal Mobile QA Solution . All rights reserved | Developed by <a href="http://bengalmobileqa.com/" target="_blank">Bengal Mobile QA Solution</a></p>
 		</div>
 	</div>
 	<!---copy-->
